--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .top{
-    background-image: url("/images/top-view-person-writing-laptop-with-copy-space.jpg");
+    background-image: url("../images/top-view-person-writing-laptop-with-copy-space.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     padding: 10% 0;
