--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     padding: 10% 0;
     background-position: center;
+    background-size: cover;
 }
 
 .top-gallery{
@@ -108,4 +109,26 @@ h2{
     width: 70%;
     border-radius: 10px;
     border: none;
+}
+
+@media (max-width: 1300px){
+    .top-gallery{
+        width: 70%;
+    }
+}
+
+@media (max-width: 767px){
+    .top-gallery{
+        text-align: center;
+        margin: auto;
+    }
+    h2{
+        padding: 5% 00%;
+    }
+}
+
+@media (max-width: 1000px){
+    .btna{
+        margin-top: 2rem;
+    }
 }
